# chatify-experimentation

./: .gitignore  README.md  config.env  login.py  main.py  main2.py  message.py  pyproject.toml
js/: bundled.js  index.html  index2.html  logic.js  logic2.js  main.js  package-lock.json  package.json  style.css
