[tool.poetry]
name = "chatify-experimentation"
version = "0.1.0"
description = "Early experimentation with the chatify project"
authors = ["William Dry <wpbdry@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
